A demonstration of streaming tagged types over POSIX file descriptors.
--HG--
rename : posix_streams.gpr => tests/streaming_tagged_records/test.gpr

--- a/.hgignore
+++ b/.hgignore
@@ -11,8 +11,12 @@ tests/build.status
 tests/run.status
 tests/*/*.errors
 tests/*/*.output
+tests/*/*.ali
+tests/*/*.o
 
 # Generated test executables:
+tests/streaming_tagged_records/receive
+tests/streaming_tagged_records/send
 
 # Test output to clean up:
 
